plugins {
  id 'java'
  id 'maven-publish'
  id 'com.gradleup.shadow' version '9.4.1'
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(25)
  }
}

subprojects {
  apply plugin: "java"
  apply plugin: "com.gradleup.shadow"
  apply plugin: "java-library"

  group = "fr.dreamin"
  version = "0.5.3"
  description = "DreamAPI - API modulaire pour Paper 26.1.2"

  repositories {
    mavenCentral()
    maven { url = "https://repo.papermc.io/repository/maven-public/" }
    maven { url = 'https://repo.xenondevs.xyz/releases' }
    maven { url = "https://ci.mg-dev.eu/plugin/repository/everything"}
    maven { url = "https://maven.citizensnpcs.co/repo"}
  }

  def mcVersion = "26.1.2"
  def paperVersion = mcVersion + ".build.+"
  def lombokVersion = "1.18.44"
  def jetbrainsAnnotationsVersion = "24.1.0"
  def jacksonVersion = "2.19.1"
  def httpClientVersion = "5.3.1"
  def bkCommonLibVersion = "1.21.8-v1-SNAPSHOT"
  def luckPermsVersion = "5.4"
  def invuiVersion = "2.1.0"
  def citizensVersion = "2.0.37-SNAPSHOT"
  def junitVersion = "5.10.0"
  def jomlVersion = "1.10.8"

  dependencies {

    compileOnly("io.papermc.paper:paper-api:$paperVersion")

    compileOnly("org.projectlombok:lombok:$lombokVersion")
    annotationProcessor("org.projectlombok:lombok:$lombokVersion")

    compileOnly("org.jetbrains:annotations:$jetbrainsAnnotationsVersion")

    compileOnly("com.fasterxml.jackson.core:jackson-databind:$jacksonVersion")

    implementation("org.apache.httpcomponents.client5:httpclient5:$httpClientVersion")

    compileOnly("com.bergerkiller.bukkit:BKCommonLib:$bkCommonLibVersion")

    compileOnly("net.luckperms:api:$luckPermsVersion")

    implementation("xyz.xenondevs.invui:invui:$invuiVersion")

    compileOnly("net.citizensnpcs:citizens-main:$citizensVersion") {
      exclude group: '*', module: '*'
    }

    testCompileOnly("org.projectlombok:lombok:$lombokVersion")
    testAnnotationProcessor("org.projectlombok:lombok:$lombokVersion")

    testCompileOnly("io.papermc.paper:paper-api:$paperVersion")
    testImplementation("org.joml:joml:$jomlVersion")
    testImplementation("org.junit.jupiter:junit-jupiter:$junitVersion")
  }

  def targetJavaVersion = JavaVersion.VERSION_25
  java {
    sourceCompatibility = targetJavaVersion
    targetCompatibility = targetJavaVersion
    if (JavaVersion.current() < targetJavaVersion) {
      toolchain.languageVersion.set(JavaLanguageVersion.of(targetJavaVersion.majorVersion))
    }
  }

  tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
  }

  test {
    useJUnitPlatform()
  }

}